--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,8 +216,8 @@ h6 {
 # Global Header
 --------------------------------------------------------------*/
 .header {
-  color: var(--default-color);
-  background-color: var(--background-color);
+  /* color: var(--default-color); */
+  background-color: rgba(255, 255, 255, 0.55) !important;
   padding: 10px 0;
   transition: all 0.5s;
   z-index: 997;
@@ -2429,3 +2429,7 @@ section,
     justify-content: center;
   }
 }
+
+  .about_2-img {
+    max-height: 700px !important;
+  }
