--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2433,3 +2433,13 @@ section,
   .about_2-img {
     max-height: 700px !important;
   }
+
+  .blog-posts-2 .section-title h2 {
+    color: var(--accent-color);
+    text-transform: uppercase;
+    font-size: 30px;
+  }
+  
+  .blog-posts-2 .section-title p {
+    font-size: 20px;
+  }
