--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,7 +228,7 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 32px;
+  max-height: 60px;
   margin-right: 8px;
 }
 
@@ -1506,7 +1506,9 @@ section,
 # Team Section
 --------------------------------------------------------------*/
 .team .person {
+  background-color: hsla(142, 100%, 50%, 0.114);
   position: relative;
+  padding-bottom: 10px;
 }
 
 .team .person figure {
