--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2111,6 +2111,9 @@ section,
 # Widgets
 --------------------------------------------------------------*/
 .widgets-container {
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.331);
+  border-radius: 10px;
+  border: 1px solid rgba(3, 202, 3, 0.401);
   margin: 60px 0 30px 0;
 }
 
