--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2476,6 +2476,12 @@ section,
       padding: 10px;
       box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     }
+
+    .tout_package_btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   .tout_package_btn {
