--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2492,3 +2492,18 @@ section,
     border-radius: 10px;
     
   }
+
+  .get_quote {
+    font-size: 18px; 
+    color: yellow; 
+    border: 2px solid yellow; 
+    padding: 5px 15px 5px 15px !important; 
+    border-radius: 10px;
+  }
+
+  .get_quote_main .info{
+    border: 2px solid rgb(255, 255, 255);
+    padding: 30px !important;
+    border-radius: 10px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  }
